lexer_parser-master/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MENOS term
Rule 3     expression -> expression SOBRE term
Rule 4     expression -> term
Rule 5     term -> term TIMES factor
Rule 6     term -> factor
Rule 7     factor -> NUMBER
Rule 8     factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

LPAREN               : 8
MENOS                : 2
NUMBER               : 7
PLUS                 : 1
RPAREN               : 8
SOBRE                : 3
TIMES                : 5
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 3 8 0
factor               : 5 6
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MENOS term
    (3) expression -> . expression SOBRE term
    (4) expression -> . term
    (5) term -> . term TIMES factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 3
    LPAREN          shift and go to state 2

    term                           shift and go to state 1
    expression                     shift and go to state 5
    factor                         shift and go to state 4

state 1

    (4) expression -> term .
    (5) term -> term . TIMES factor

    RPAREN          reduce using rule 4 (expression -> term .)
    PLUS            reduce using rule 4 (expression -> term .)
    MENOS           reduce using rule 4 (expression -> term .)
    SOBRE           reduce using rule 4 (expression -> term .)
    $end            reduce using rule 4 (expression -> term .)
    TIMES           shift and go to state 6


state 2

    (8) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MENOS term
    (3) expression -> . expression SOBRE term
    (4) expression -> . term
    (5) term -> . term TIMES factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 3
    LPAREN          shift and go to state 2

    term                           shift and go to state 1
    expression                     shift and go to state 7
    factor                         shift and go to state 4

state 3

    (7) factor -> NUMBER .

    TIMES           reduce using rule 7 (factor -> NUMBER .)
    PLUS            reduce using rule 7 (factor -> NUMBER .)
    MENOS           reduce using rule 7 (factor -> NUMBER .)
    SOBRE           reduce using rule 7 (factor -> NUMBER .)
    $end            reduce using rule 7 (factor -> NUMBER .)
    RPAREN          reduce using rule 7 (factor -> NUMBER .)


state 4

    (6) term -> factor .

    TIMES           reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MENOS           reduce using rule 6 (term -> factor .)
    SOBRE           reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)


state 5

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MENOS term
    (3) expression -> expression . SOBRE term

    PLUS            shift and go to state 8
    MENOS           shift and go to state 9
    SOBRE           shift and go to state 10


state 6

    (5) term -> term TIMES . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 3
    LPAREN          shift and go to state 2

    factor                         shift and go to state 11

state 7

    (8) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MENOS term
    (3) expression -> expression . SOBRE term

    RPAREN          shift and go to state 12
    PLUS            shift and go to state 8
    MENOS           shift and go to state 9
    SOBRE           shift and go to state 10


state 8

    (1) expression -> expression PLUS . term
    (5) term -> . term TIMES factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 3
    LPAREN          shift and go to state 2

    term                           shift and go to state 13
    factor                         shift and go to state 4

state 9

    (2) expression -> expression MENOS . term
    (5) term -> . term TIMES factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 3
    LPAREN          shift and go to state 2

    term                           shift and go to state 14
    factor                         shift and go to state 4

state 10

    (3) expression -> expression SOBRE . term
    (5) term -> . term TIMES factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 3
    LPAREN          shift and go to state 2

    term                           shift and go to state 15
    factor                         shift and go to state 4

state 11

    (5) term -> term TIMES factor .

    TIMES           reduce using rule 5 (term -> term TIMES factor .)
    PLUS            reduce using rule 5 (term -> term TIMES factor .)
    MENOS           reduce using rule 5 (term -> term TIMES factor .)
    SOBRE           reduce using rule 5 (term -> term TIMES factor .)
    $end            reduce using rule 5 (term -> term TIMES factor .)
    RPAREN          reduce using rule 5 (term -> term TIMES factor .)


state 12

    (8) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    MENOS           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    SOBRE           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 8 (factor -> LPAREN expression RPAREN .)


state 13

    (1) expression -> expression PLUS term .
    (5) term -> term . TIMES factor

    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MENOS           reduce using rule 1 (expression -> expression PLUS term .)
    SOBRE           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 6


state 14

    (2) expression -> expression MENOS term .
    (5) term -> term . TIMES factor

    RPAREN          reduce using rule 2 (expression -> expression MENOS term .)
    PLUS            reduce using rule 2 (expression -> expression MENOS term .)
    MENOS           reduce using rule 2 (expression -> expression MENOS term .)
    SOBRE           reduce using rule 2 (expression -> expression MENOS term .)
    $end            reduce using rule 2 (expression -> expression MENOS term .)
    TIMES           shift and go to state 6


state 15

    (3) expression -> expression SOBRE term .
    (5) term -> term . TIMES factor

    RPAREN          reduce using rule 3 (expression -> expression SOBRE term .)
    PLUS            reduce using rule 3 (expression -> expression SOBRE term .)
    MENOS           reduce using rule 3 (expression -> expression SOBRE term .)
    SOBRE           reduce using rule 3 (expression -> expression SOBRE term .)
    $end            reduce using rule 3 (expression -> expression SOBRE term .)
    TIMES           shift and go to state 6

